[package]
name = "custom-markdown-widget"
version = "0.1.0"
edition = "2021"

[dependencies]
syntect = "5.2.0"
markdown = "0.3.0"
lazy_static = "1.4.0"

[dependencies.cosmic-text]
git = "https://github.com/pop-os/cosmic-text"
default-features = false
features = ["syntect"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["winit", "wgpu"]
